seaqt/QtMultimedia/gen_qaudioencodersettingscontrol.h

class QAudioEncoderSettings;
class QAudioEncoderSettingsControl;
class QMetaObject;
typedef struct QAudioEncoderSettings QAudioEncoderSettings;
typedef struct QAudioEncoderSettingsControl QAudioEncoderSettingsControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QAudioEncoderSettingsControl_metaObject(const QAudioEncoderSettingsControl* self);
void* QAudioEncoderSettingsControl_metacast(QAudioEncoderSettingsControl* self, const char* param1);
struct miqt_string QAudioEncoderSettingsControl_tr(const char* s);
struct miqt_string QAudioEncoderSettingsControl_trUtf8(const char* s);
struct miqt_array /* of struct miqt_string */  QAudioEncoderSettingsControl_supportedAudioCodecs(const QAudioEncoderSettingsControl* self);
struct miqt_string QAudioEncoderSettingsControl_codecDescription(const QAudioEncoderSettingsControl* self, struct miqt_string codecName);
struct miqt_array /* of int */  QAudioEncoderSettingsControl_supportedSampleRates(const QAudioEncoderSettingsControl* self, QAudioEncoderSettings* settings, bool* continuous);
QAudioEncoderSettings* QAudioEncoderSettingsControl_audioSettings(const QAudioEncoderSettingsControl* self);
void QAudioEncoderSettingsControl_setAudioSettings(QAudioEncoderSettingsControl* self, QAudioEncoderSettings* settings);
struct miqt_string QAudioEncoderSettingsControl_tr2(const char* s, const char* c);
struct miqt_string QAudioEncoderSettingsControl_tr3(const char* s, const char* c, int n);
struct miqt_string QAudioEncoderSettingsControl_trUtf82(const char* s, const char* c);
struct miqt_string QAudioEncoderSettingsControl_trUtf83(const char* s, const char* c, int n);
void QAudioEncoderSettingsControl_delete(QAudioEncoderSettingsControl* self);